2006-07-20  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document SIGTERM behaviour.

	* sbuild/sbuild-session.cc
	(set_signal_handler): New method for use by set_sighup_handler and
	set_sigterm_handler.
	(clear_signal_handler): New method for use by clear_sighup_handler
	and clear_sigterm_handler.
	(set_sighup_handler): Use set_signal_handler.
	(clear_sighup_handler): Use clear_signal_handler.
	(set_sigterm_handler): New method.
	(clear_sigterm_handler): New method.

	* sbuild/sbuild-session.h: Rename saved_signals member to
	saved_sighup_signal, and add a saved_sigterm_signal member.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth-conv-tty.cc (conversation): Log using
	standard log functions rather than using std::cerr.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-log.cc: Add translator comments, and mark up log
	abbreviations for translation.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* Added a number of debugging messages to important codepaths.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* po/vi.po: Restore unmaintained translation, but leave out of
	LINGUAS.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* po/sv.po: Update Swedish translation.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Update.

	* Add translator comments for ellipsis (...) in translatable
	strings.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #378469.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document terminal state save and restore behaviour.

	* sbuild/sbuild-session.cc
	(save_termios): New method.  Save terminal state.
	(restore_termios): New method.  Restore terminal state.
	(run_impl): Save and restore terminal state between opening and
	closing the session.

	* sbuild/sbuild-session.h: Add saved_termios and termios_ok
	members.

	* schroot/schroot-base-main.cc (run): Remove termios save and
	restore.

2006-07-19  Roger Leigh  <rleigh@debian.org>